Signed-off-by: yvoste <yves.mitaine@nordnet.fr> Another day

--- a/src/DEUSI/PlatformBundle/Resources/views/Advert/index.html.twig
+++ b/src/DEUSI/PlatformBundle/Resources/views/Advert/index.html.twig
@@ -9,7 +9,7 @@
 {% block deusiplatform_body %}
 
   <h2>Liste des annonces</h2>
-
+  <div>{{ dump(advert) }} </div>
   <ul>
     {% for advert in listAdverts %}
       <li>
