Signed-off-by: yvoste <yves.mitaine@nordnet.fr> Tuto Sécurité

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -28,7 +28,7 @@
           <div id="menu" class="col-md-3">
             <h3>Les annonces</h3>
             <ul class="nav nav-pills nav-stacked">
-              <li><a href="{{ path('deusi_platform_home') }}">Accueil</a></li>
+              <li><a href="{{ path('deusi_platform_home', {'page': 1}) }}">Accueil</a></li>
               <li><a href="{{ path('deusi_platform_add') }}">Ajouter une annonce</a></li>
             </ul>
 
