--- a/src/DEUSI/PlatformBundle/Resources/views/Advert/view.html.twig
+++ b/src/DEUSI/PlatformBundle/Resources/views/Advert/view.html.twig
@@ -26,7 +26,7 @@
     {% endfor %}
   </ul>
     <p>
-      <a href="{{ path('deusi_platform_home') }}" class="btn btn-default">
+      <a href="{{ path('deusi_platform_home', {'page': 1}) }}" class="btn btn-default">
         <i class="glyphicon glyphicon-chevron-left"></i>
         Retour à la liste
       </a>
