--- a/src/DEUSI/PlatformBundle/Resources/views/Advert/delete.html.twig
+++ b/src/DEUSI/PlatformBundle/Resources/views/Advert/delete.html.twig
@@ -3,30 +3,27 @@
 {% extends "@DEUSIPlatform/layout.html.twig" %}
 
 {% block title %}
-  Effacer une annonce - {{ parent() }}
+  Supprimer une annonce - {{ parent() }}
 {% endblock %}
 
-{% block deusiplatform_body %}
+{% block ocplatform_body %}
 
-  <h2></h2>
-  
+  <h2>Supprimer une annonce</h2>
 
-  <div class="well">
-    
-  </div>
-   <p>
-    Etes-vous sur
-   
-  </p>
   <p>
-    <a href="{{ path('deusi_platform_home') }}" class="btn btn-default">
-      <i class="glyphicon glyphicon-chevron-left"></i>
-      Retour à la liste
-    </a>
-    <a href="{{ path('deusi_platform_edit', {'id': advert.id}) }}" class="btn btn-default">
-      <i class="glyphicon glyphicon-edit"></i>
-      Modifier l'annonce
-    </a>    
+    Etes-vous certain de vouloir supprimer l'annonce "{{ advert.title }}" ?
   </p>
+
+  {# On met l'id de l'annonce dans la route de l'action du formulaire #}
+  <form action="{{ path('oc_platform_delete', {'id': advert.id}) }}" method="post">
+    <a href="{{ path('oc_platform_view', {'id': advert.id}) }}" class="btn btn-default">
+      <i class="glyphicon glyphicon-chevron-left"></i>
+      Retour à l'annonce
+    </a>
+    {# Ici j'ai écrit le bouton de soumission à la main #}
+    <input type="submit" value="Supprimer" class="btn btn-danger" />
+    {# Ceci va générer le champ CSRF #}
+    {{ form_rest(form) }}
+  </form>
 
 {% endblock %}
