--- a/src/DEUSI/PlatformBundle/Resources/views/Advert/form.html.twig
+++ b/src/DEUSI/PlatformBundle/Resources/views/Advert/form.html.twig
@@ -4,8 +4,141 @@
 
 <h3>Formulaire d'annonce</h3>
 
-{# On laisse vide la vue pour l'instant, on la comblera plus tard
-   lorsqu'on saura afficher un formulaire. #}
 <div class="well">
-  Ici se trouvera le formulaire.
+  {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
+
+  {# Les erreurs générales du formulaire. #}
+  {{ form_errors(form) }}
+
+  {# Génération du label + error + widget pour un champ. 
+  {% if form_row(form.date) is not null %}
+      {{ form_row(form.date) }}
+    {% endif %}#}
+  
+
+  {# Génération manuelle et éclatée : #}
+  <div class="form-group">
+      <div class="col-sm-6">
+        {{ form_row(form.categories) }}
+        <a href="#" id="add_category" class="btn btn-default">Ajouter une catégorie</a> 
+      </div>
+  </div>
+  <div class="form-group">      
+        {# Génération du label. #}
+        {{ form_label(form.title, "Titre de l'annonce", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+        {# Affichage des erreurs pour ce champ précis. #}
+        {{ form_errors(form.title) }}
+        <div class="col-sm-8">
+          {# Génération de l'input. #}
+          {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
+        </div>
+  </div>
+  <div class="form-group">
+        {{ form_label(form.content, "Contenu de l'annonce", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+        {{ form_errors(form.content) }}
+        <div class="col-sm-8">
+          {{ form_widget(form.content, {'attr': {'class': 'form-control'}}) }}
+        </div>
+  </div>
+   <div class="form-group">
+        {{ form_label(form.author, "Auteur de l'annonce", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+        {{ form_errors(form.author) }}
+        <div class="col-sm-8">
+            {{ form_widget(form.author, {'attr': {'class': 'form-control'}}) }}  
+       </div>
+   </div>
+  {# <div class="form-group">
+        {{ form_label(form.published, "Publier", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+        {{ form_errors(form.published) }}
+        <div class="col-sm-8">
+            {{ form_widget(form.published, {'attr': {'class': 'form-control'}}) }}  
+       </div>
+    </div>#}
+    <div class="form-group">
+        <div class="col-sm-8">
+        {{ form_rest(form) }}
+        </div>
+    </div>  
+  {# Pour le bouton, pas de label ni d'erreur, on affiche juste le widget #}
+  {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
+
+  {# Génération automatique des champs pas encore écrits.
+     Dans cet exemple, ce serait le champ CSRF (géré automatiquement par Symfony !)
+     et tous les champs cachés (type « hidden »). #}
+  
+
+  {# Fermeture de la balise <form> du formulaire HTML #}
+  {{ form_end(form) }}
 </div>
+{# On charge la bibliothèque jQuery. Ici, je la prends depuis le CDN google
+   mais si vous l'avez en local, changez simplement l'adresse. #}
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+{# Voici le script en question : #}
+<script type="text/javascript">
+  $(document).ready(function() {
+    // On récupère la balise <div> en question qui contient l'attribut « data-prototype » qui nous intéresse.
+    var $container = $('div#deusi_platformbundle_advert_categories');
+
+    // On définit un compteur unique pour nommer les champs qu'on va ajouter dynamiquement
+    var index = $container.find(':input').length;
+
+    // On ajoute un nouveau champ à chaque clic sur le lien d'ajout.
+    $('#add_category').click(function(e) {
+      addCategory($container);
+
+      e.preventDefault(); // évite qu'un # apparaisse dans l'URL
+      return false;
+    });
+
+    // On ajoute un premier champ automatiquement s'il n'en existe pas déjà un (cas d'une nouvelle annonce par exemple).
+    if (index == 0) {
+      addCategory($container);
+    } else {
+      // S'il existe déjà des catégories, on ajoute un lien de suppression pour chacune d'entre elles
+      $container.children('div').each(function() {
+        addDeleteLink($(this));
+      });
+    }
+
+    // La fonction qui ajoute un formulaire CategoryType
+    function addCategory($container) {
+      // Dans le contenu de l'attribut « data-prototype », on remplace :
+      // - le texte "__name__label__" qu'il contient par le label du champ
+      // - le texte "__name__" qu'il contient par le numéro du champ
+      var template = $container.attr('data-prototype')
+        .replace(/__name__label__/g, 'Catégorie n°' + (index+1))
+        .replace(/__name__/g,        index)
+      ;
+
+      // On crée un objet jquery qui contient ce template
+      var $prototype = $(template);
+
+      // On ajoute au prototype un lien pour pouvoir supprimer la catégorie
+      addDeleteLink($prototype);
+
+      // On ajoute le prototype modifié à la fin de la balise <div>
+      $container.append($prototype);
+
+      // Enfin, on incrémente le compteur pour que le prochain ajout se fasse avec un autre numéro
+      index++;
+    }
+
+    // La fonction qui ajoute un lien de suppression d'une catégorie
+    function addDeleteLink($prototype) {
+      // Création du lien
+      var $deleteLink = $('<a href="#" class="btn btn-danger">Supprimer</a>');
+
+      // Ajout du lien
+      $prototype.append($deleteLink);
+
+      // Ajout du listener sur le clic du lien pour effectivement supprimer la catégorie
+      $deleteLink.click(function(e) {
+        $prototype.remove();
+
+        e.preventDefault(); // évite qu'un # apparaisse dans l'URL
+        return false;
+      });
+    }
+  });
+</script>
