--- a/src/DEUSI/PlatformBundle/Resources/views/Advert/index.html.twig
+++ b/src/DEUSI/PlatformBundle/Resources/views/Advert/index.html.twig
@@ -9,7 +9,6 @@
 {% block deusiplatform_body %}
 
   <h2>Liste des annonces</h2>
-  <div>{{ dump(advert) }} </div>
   <ul>
     {% for advert in listAdverts %}
       <li>
@@ -23,7 +22,14 @@
       <li>Pas (encore !) d'annonces</li>
     {% endfor %}
   </ul>
-
+   <ul class="pagination">
+    {# On utilise la fonction range(a, b) qui crée un tableau de valeurs entre a et b #}
+    {% for p in range(1, nbPages) %}
+      <li{% if p == page %} class="active"{% endif %}>
+        <a href="{{ path('deusi_platform_home', {'page': p}) }}">{{ p }}</a>
+      </li>
+    {% endfor %}
+  </ul>
 {% endblock %}
 
 
