--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}DEUSI{% endblock %}</title>    
     <link href="{{dir_web}}/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link rel="manifest" href="{{dir_web}}/manifest.json">
   </head>
   <body>    
     <div class="container">
@@ -49,5 +50,8 @@
     </div>
     <script src="{{dir_web}}/js/jquery/jQuery3.3.1.js"></script>
     <script src="{{dir_web}}/bootstrap/js/bootstrap.js"></script>
+    <script src="{{dir_web}}/sw/sw.js"></script>
+    <script src="{{dir_web}}/js/main.js"></script>
+    {% block js %} {% endblock %}
   </body>
 </html>
