--- a/src/DEUSI/PlatformBundle/Resources/views/Advert/form.html.twig
+++ b/src/DEUSI/PlatformBundle/Resources/views/Advert/form.html.twig
@@ -5,48 +5,55 @@
 <h3>Formulaire d'annonce</h3>
 
 <div class="well">
-  {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
+    {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
 
-  {# Les erreurs générales du formulaire. #}
-  {{ form_errors(form) }}
+    {# Les erreurs générales du formulaire. #}
+    {{ form_errors(form) }}
 
-  {# Génération du label + error + widget pour un champ. 
-  {% if form_row(form.date) is not null %}
-      {{ form_row(form.date) }}
-    {% endif %}#}
-  
+    {# Génération du label + error + widget pour un champ. 
+    {% if form_row(form.date) is not null %}
+        {{ form_row(form.date) }}
+      {% endif %}#}
 
-  {# Génération manuelle et éclatée : #}
-  <div class="form-group">
-      <div class="col-sm-6">
-        {{ form_row(form.categories) }}
-        <a href="#" id="add_category" class="btn btn-default">Ajouter une catégorie</a> 
-      </div>
-  </div>
-  <div class="form-group">      
-        {# Génération du label. #}
-        {{ form_label(form.title, "Titre de l'annonce", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-        {# Affichage des erreurs pour ce champ précis. #}
-        {{ form_errors(form.title) }}
-        <div class="col-sm-8">
-          {# Génération de l'input. #}
-          {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
+
+    {# Génération manuelle et éclatée : #}
+    <div class="form-group">
+        <div class="col-sm-6">
+          {{ form_row(form.categories) }}
+          <a href="#" id="add_category" class="btn btn-default">Ajouter une catégorie</a> 
         </div>
-  </div>
-  <div class="form-group">
-        {{ form_label(form.content, "Contenu de l'annonce", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-        {{ form_errors(form.content) }}
-        <div class="col-sm-8">
-          {{ form_widget(form.content, {'attr': {'class': 'form-control'}}) }}
+    </div>
+    <div class="form-group">      
+          {# Génération du label. #}
+          {{ form_label(form.title, "Titre de l'annonce", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+          {# Affichage des erreurs pour ce champ précis. #}
+          {{ form_errors(form.title) }}
+          <div class="col-sm-8">
+            {# Génération de l'input. #}
+            {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
+          </div>
+    </div>
+    <div class="form-group">
+          {{ form_label(form.content, "Contenu de l'annonce", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+          {{ form_errors(form.content) }}
+          <div class="col-sm-8">
+            {{ form_widget(form.content, {'attr': {'class': 'form-control'}}) }}
+          </div>
+    </div>
+    <div class="form-group">
+         {{ form_label(form.author, "Auteur de l'annonce", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+         {{ form_errors(form.author) }}
+         <div class="col-sm-8">
+             {{ form_widget(form.author, {'attr': {'class': 'form-control'}}) }}  
         </div>
-  </div>
-   <div class="form-group">
-        {{ form_label(form.author, "Auteur de l'annonce", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-        {{ form_errors(form.author) }}
+    </div>
+    <div class="form-group">
+        {{ form_label(form.email, "email", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+        {{ form_errors(form.email) }}
         <div class="col-sm-8">
-            {{ form_widget(form.author, {'attr': {'class': 'form-control'}}) }}  
-       </div>
-   </div>
+            {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}  
+        </div>
+    </div>
   {# <div class="form-group">
         {{ form_label(form.published, "Publier", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
         {{ form_errors(form.published) }}
