--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -9,9 +9,13 @@
     <title>{% block title %}DEUSI{% endblock %}</title>    
     <link href="{{dir_web}}/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link rel="manifest" href="{{dir_web}}/manifest.json">
+    <style type='text/css'>
+        .unsub {display:none;}
+    </style>
   </head>
   <body>    
     <div class="container">
+        <button disabled class="push-btn" >Enable Push Messaging</button>
         <div id="header" class="jumbotron">
           <h2>{% block ho %}Plateforme d'annonces{% endblock %}</h2>
           <p>
@@ -23,7 +27,7 @@
               Participer au MOOC »
             </a>
           </p>
-          <button onclick="askPermission(1)">ASK_PERMISSION_REGISTER</button>
+          
           <a href="{{ path('deusi_notif_send') }}">SEND</a>
         </div>
 
@@ -52,6 +56,7 @@
     </div>
     <script type="text/javascript" src="{{dir_web}}/js/jquery/jQuery3.3.1.js"></script>
     <script type="text/javascript" src="{{dir_web}}/bootstrap/js/bootstrap.js"></script>
+    <script type="application/javascript" src="{{dir_web}}/js/keys.js"></script>
     <script type="application/javascript" src="{{dir_web}}/sw.js"></script>
     <script type="application/javascript" src="{{dir_web}}/js/main.js"></script>
     {% block js %} {% endblock %}
