--- a/src/DEUSI/PlatformBundle/Resources/views/Advert/view.html.twig
+++ b/src/DEUSI/PlatformBundle/Resources/views/Advert/view.html.twig
@@ -50,10 +50,10 @@
     let idnew = {{ idnew }};
     if(typeof(anew) !== 'undefined'){
         if(anew === 1 ){
-            alert('une nouvelle annonce_'+anew + idnew);
-            askPermission(idnew);
+            alert('NEW ADVERT_'+anew + idnew);
+            //askPermission(idnew);
         } else {
-             alert('PAS de nouvelle annonce_'+anew);
+             alert('OLD ADVERT_'+anew);
         }
     } else {
         alert('exist pas');
